Fix definition list alignment

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -245,20 +245,20 @@ dl.aligned {
 }
 
 dl.aligned dt {
-    width: 30%;
-    float: left;
-    margin: 0;
-    clear: both;
+  width: 30%;
+  float: left;
+  margin: 0;
+  clear: both;
 }
 
 dl.aligned.course-part-tasks dt {
   width: 40%;
 }
 
-
 dl.aligned dd {
-    width: 70%;
-    float: right;
+  width: 70%;
+  float: right;
+  margin: 0;
 }
 
 dl.aligned.course-part-tasks dd {
